@@ -55,7 +55,7 @@ public class GroupingSetsCollector {
 
     public void add(GroupingSet aggInfo) {
         assert groupingSets.isEmpty()
-            || groupingSets.get(0).getColumns().length
+            || groupingSets.getFirst().getColumns().length
             >= aggInfo.getColumns().length;
         groupingSets.add(aggInfo);
     }
